--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: /whoodes/whoodes.github.io/blob/gh-pages/assets/images/profile-pic.jpg
+picture: /assets/images/profile-pic.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
