AA: algorithms project added.

--- a/_config.yml
+++ b/_config.yml
@@ -54,18 +54,12 @@ github: whoodes
 email: hoodesw@gmail.com
 
 authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+    whoodes:
+        name: Wyatt Hoodes
+        bio: Coding + Surfing = Living
         external-image: false
-        picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        picture: assets/images/profile-pic.jpg
+        twitter: wyatt_hoodes
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
