update: about me and fix email.

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ github: whoodes
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: hoodesw@gmail.com
+email: hoodesw@hawaii.edu
 
 authors:
     whoodes:
