--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ picture: /assets/images/profile-pic.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-external: false
+resume-url: /assets/images/resume-image.png
 
 url: https://whoodes.github.io
 # your url: http://USERNAME.github.io
