--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ email: hoodesw@hawaii.edu
 authors:
     whoodes:
         name: Wyatt Hoodes
-        bio: Advocate of open source | Solver of puzzles
+        bio: Pressured, but not crushed; perplexed, but not in despair
         external-image: false
         picture: assets/images/profile-pic.jpg
         twitter: wyatt_hoodes
