--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ email: hoodesw@hawaii.edu
 authors:
     whoodes:
         name: Wyatt Hoodes
-        bio: Pressured != crushed; perplexed != despair
+        bio: Pressured != crushed; Perplexed != despair
         external-image: false
         picture: assets/images/profile-pic.jpg
         twitter: wyatt_hoodes
