bio: Add contributor to bio line.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Wyatt Hoodes
-bio: Advocate of open source | Solver of puzzles
+bio: Advocate of open source | Solver of puzzles | Contributor @ Zulip
 
 # twitter summary info
 description: A blog about technology and stuff related
