--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Wyatt Hoodes
-bio: Advocate of open source | Solver of puzzles | Contributor @ Zulip
+bio: Advocate of open source | Solver of puzzles | 2019 GSoC student @ Zulip
 
 # twitter summary info
 description: A blog about technology and stuff related
